# Agent-Platform

./: .dockerignore  .env.example  .gitignore  AGENTS.agentql  AGENTS.md  README.agentql  README.md  docker-compose.yml  fly.surrealdb.toml  fly.toml  netlify.toml  open-container-compose.yml  workspace.yaml
.github/: environments.yml
.github/workflows/: agent-db-runtime-gates.yml  agent-db-runtime-value-loop.yml  ci.yml  deploy.yml  e2e.yml  governance.yml
agentql/: README.agentql  README.md  langium-config.json  package.json  tsconfig.json
agentql/examples/: platform.agentql
docker/agent-dashboard/: Dockerfile  package.json  server.js
docker/agent-knowledge/: Dockerfile  requirements.txt
docs/: agent-framework-spec.md  agentql-langium-decision.md  bolt-frontend-bootstrap-decision.md  container-runtime-decision.md  ecosystem-architecture-map.md  final-review-authority.md  kubernetes-runtime-decision.md  local-dev.md  platform-roadmap.md  platform-workspace.md  production-readiness-checklist.md  surreal-architecture.md  upstream-product-composition-decision.md  upstream-sdk-tooling-plan.md  vps-microk8s-deployment.md
docs/context-map/: agennext-platform.cml
governance/: README.agentql  README.md  no-python-business-logic.rules.tsv  required-checks.agentql
scripts/: backup.sh  bootstrap-vps.sh  bootstrap.sh  build-images.sh  check-no-python-business-logic.sh  cloud_deploy.sh  deploy.sh  dev.sh  restore.sh  rollback.sh  run-e2e.sh  smoke_test.py  test-platform.sh
sdk/: pyproject.toml
sdk/agent_platform_sdk/: __init__.py  client.py  models.py
(+302 files in other folders)
